force-app/main/default/objects/OneWorkflow__c/OneWorkflow__c.object-meta.xml
<CustomObject>
    <description>Object in Salesforce to communicate with the system Oneworkflow</description>
    <label>OneWorkflow</label>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>OneWorkflow Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OneWorkflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>