force-app/main/default/objects/OneWorkflow__c/fields/ActionCode__c.field-meta.xml
<CustomField>
    <fullName>ActionCode__c</fullName>
    <label>ActionCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>