force-app/main/default/objects/OneWorkflow__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <description>For oneworkflow updates</description>
    <label>Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>