force-app/main/default/objects/OneWorkflow__c/fields/AssignReason__c.field-meta.xml
<CustomField>
    <fullName>AssignReason__c</fullName>
    <defaultValue>&quot;Assignment&quot;</defaultValue>
    <label>AssignReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>