force-app/main/default/objects/OneWorkflow__c/fields/Created_in_OW__c.field-meta.xml
<CustomField>
    <fullName>Created_in_OW__c</fullName>
    <description>Check to see if the ticket is created in OW system</description>
    <formula>IF(NOT(ISBLANK(TicketId__c)),
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;&quot;),IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check to see if the ticket is created in OW system</inlineHelpText>
    <label>Created in OW?</label>
    <type>Text</type>
</CustomField>