force-app/main/default/objects/OneWorkflow__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The content of this field will be sent to One Workflow</description>
    <inlineHelpText>The content of this field will be sent to One Workflow</inlineHelpText>
    <label>Description/Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>