force-app/main/default/objects/OneWorkflow__c/fields/EventEndTime__c.field-meta.xml
<CustomField>
    <fullName>EventEndTime__c</fullName>
    <description>For oneworkflow updates</description>
    <label>EventEndTime</label>
    <type>DateTime</type>
</CustomField>