force-app/main/default/objects/OneWorkflow__c/fields/ExternalJobId__c.field-meta.xml
<CustomField>
    <fullName>ExternalJobId__c</fullName>
    <description>For Oneworkflow updates</description>
    <label>ExternalJobId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>