force-app/main/default/objects/OneWorkflow__c/fields/FaultPosition__c.field-meta.xml
<CustomField>
    <fullName>FaultPosition__c</fullName>
    <label>FaultPosition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>