force-app/main/default/objects/OneWorkflow__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <description>For OW updates</description>
    <label>JobId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>