force-app/main/default/objects/OneWorkflow__c/fields/OnHoldReason__c.field-meta.xml
<CustomField>
    <fullName>OnHoldReason__c</fullName>
    <label>OnHoldReason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Customer info</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>BMC</fullName>
            </value>
            <value>
                <fullName>Change Implementation</fullName>
            </value>
            <value>
                <fullName>DEPLOY</fullName>
            </value>
            <value>
                <fullName>Incident ongoing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pending customer contact</fullName>
            </value>
            <value>
                <fullName>TELIA_INFRA</fullName>
            </value>
            <value>
                <fullName>UAT_DEPLOY</fullName>
            </value>
            <value>
                <fullName>UAT_TEST</fullName>
            </value>
            <value>
                <fullName>USER_INFO</fullName>
            </value>
            <value>
                <fullName>Waiting for Info from Supplier</fullName>
            </value>
            <value>
                <fullName>Waiting for Info from Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>