force-app/main/default/objects/OneWorkflow__c/fields/OnHoldUntil__c.field-meta.xml
<CustomField>
    <fullName>OnHoldUntil__c</fullName>
    <description>For oneworkflow updates</description>
    <label>OnHoldUntil</label>
    <type>DateTime</type>
</CustomField>