force-app/main/default/objects/OneWorkflow__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>For OW updates</description>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ack</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Assignee Change</fullName>
            </value>
            <value>
                <fullName>Manual Notification</fullName>
            </value>
            <value>
                <fullName>Reject Assignment</fullName>
            </value>
            <value>
                <fullName>Exit Pending</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
            <value>
                <fullName>Modify Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>