force-app/main/default/objects/OneWorkflow__c/fields/OW_TicketId__c.field-meta.xml
<CustomField>
    <fullName>OW_TicketId__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  TicketId__c, &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OW TicketId</label>
    <type>Text</type>
</CustomField>