force-app/main/default/objects/OneWorkflow__c/fields/OWDescription__c.field-meta.xml
<CustomField>
    <fullName>OWDescription__c</fullName>
    <description>for OW updates</description>
    <label>OWDescription</label>
    <type>TextArea</type>
</CustomField>