force-app/main/default/objects/OneWorkflow__c/fields/PrimaryCause__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCause__c</fullName>
    <description>for Oneworkflow updates</description>
    <label>PrimaryCause</label>
    <length>70</length>
    <type>Text</type>
</CustomField>