force-app/main/default/objects/OneWorkflow__c/fields/ReasonForWithdrawal__c.field-meta.xml
<CustomField>
    <fullName>ReasonForWithdrawal__c</fullName>
    <label>ReasonForWithdrawal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Withdrawn</fullName>
            </value>
            <value>
                <fullName>Dublicate Entries</fullName>
            </value>
            <value>
                <fullName>False Alarm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>