force-app/main/default/objects/OneWorkflow__c/fields/RejectReason__c.field-meta.xml
<CustomField>
    <fullName>RejectReason__c</fullName>
    <description>for OW updates</description>
    <label>RejectReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>