force-app/main/default/objects/OneWorkflow__c/fields/RequestStatus__c.field-meta.xml
<CustomField>
    <fullName>RequestStatus__c</fullName>
    <description>for OW updates</description>
    <label>RequestStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>