force-app/main/default/objects/OneWorkflow__c/fields/ResolutionCode__c.field-meta.xml
<CustomField>
    <fullName>ResolutionCode__c</fullName>
    <label>ResolutionCode</label>
    <length>70</length>
    <type>Text</type>
</CustomField>