force-app/main/default/objects/OneWorkflow__c/fields/TicketId__c.field-meta.xml
<CustomField>
    <fullName>TicketId__c</fullName>
    <label>TicketId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>