force-app/main/default/objects/OneWorkflow__c/fields/TimelineDateandTime__c.field-meta.xml
<CustomField>
    <fullName>TimelineDateandTime__c</fullName>
    <description>For Oneworkflow updates</description>
    <label>TimelineDateandTime</label>
    <type>DateTime</type>
</CustomField>