force-app/main/default/objects/OneWorkflow__c/fields/TimelineTextEntry__c.field-meta.xml
<CustomField>
    <fullName>TimelineTextEntry__c</fullName>
    <description>for Oneworkflow updates</description>
    <label>TimelineTextEntry</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>