force-app/main/default/objects/OneWorkflow__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BSS</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>VAS</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
                <default>true</default>
                <label>Voice</label>
            </value>
            <value>
                <fullName>ADM</fullName>
                <isActive>false</isActive>
                <label>ADM</label>
            </value>
            <value>
                <fullName>MSC</fullName>
                <isActive>false</isActive>
                <label>MSC</label>
            </value>
            <value>
                <fullName>NodeB</fullName>
                <isActive>false</isActive>
                <label>NodeB</label>
            </value>
            <value>
                <fullName>RNC</fullName>
                <isActive>false</isActive>
                <label>RNC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>