force-app/main/default/objects/OneWorkflow__c/fields/Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Update_Type__c</fullName>
    <description>Value to send to OW as operation</description>
    <inlineHelpText>The selected operation will take place in the One Workflow system</inlineHelpText>
    <label>Update Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Update_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Assign</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
                <default>true</default>
                <label>Create</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>