force-app/main/default/objects/OneWorkflow__c/validationRules/Description_is_needed_for_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_is_needed_for_Create</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Update_Type__c, &apos;Create&apos;) , ISBLANK(Description__c) )</errorConditionFormula>
    <errorMessage>Please enter value in the Description</errorMessage>
</ValidationRule>