force-app/main/default/objects/OneWorkflow__c/validationRules/Information_is_required_for_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Information_is_required_for_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Update_Type__c, &apos;Closed&apos;) , ISBLANK(Resolution__c) )</errorConditionFormula>
    <errorMessage>You must enter Resolution and Resolution Code when Closed is selected as Update Type</errorMessage>
</ValidationRule>