force-app/main/default/objects/OneWorkflow__c/validationRules/Reason_is_required_for_Assign.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_is_required_for_Assign</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Update_Type__c, &apos;Assign&apos;) , ISBLANK(AssignReason__c) )</errorConditionFormula>
    <errorMessage>You must enter Assign Reason when Assign is selected as Update Type</errorMessage>
</ValidationRule>