force-app/main/default/objects/OneWorkflow__c/validationRules/Reason_is_required_for_Withdrawn.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_is_required_for_Withdrawn</fullName>
    <active>true</active>
    <description>You must enter a Reason for Withdraw if status is selected as &quot;Withdrawn&quot;,</description>
    <errorConditionFormula>AND(ISPICKVAL(Update_Type__c, &apos;Withdrawn&apos;) ,ISPICKVAL(ReasonForWithdrawal__c, &apos;&apos;))</errorConditionFormula>
    <errorMessage>You must enter a Reason for Withdraw if status is selected as &quot;Withdrawn&quot;</errorMessage>
</ValidationRule>